# core

./: .env.example  .gitignore  Cargo.toml  GOALS.md  LICENSE.md  PROJECT_STRUCTURE.md  README.md  config.toml.example  docker-compose.dev.yml  mise.toml
.github/: copilot-instructions.md
src/: connection.rs  lib.rs  main.rs  password.rs  token.rs
src/common/: app_state.rs  configuration.rs  macros.rs  mod.rs  model.rs  module.rs  server.rs
src/config/: enviroment.rs  file.rs  mod.rs
src/extractors/: auth.rs
src/handlers/: mod.rs
src/models/: account.rs  mod.rs  session.rs
src/modules/: mod.rs
src/modules/authentication/: exports.rs  mod.rs  module.rs  router.rs
src/modules/authentication/config/: authentication.rs
src/modules/authentication/dtos/: account.rs  authentication.rs  mod.rs  session.rs
src/modules/authentication/errors/: service.rs
src/modules/authentication/guards/: auth_services.rs  auth_state.rs  mod.rs
src/modules/authentication/macros/: error_return.rs  mod.rs
src/modules/authentication/migrations/: account.rs  mod.rs  session.rs
src/modules/authentication/models/: account.rs  mod.rs  session.rs
src/modules/authentication/routes/: account.rs  authentication.rs  mod.rs  session.rs
src/modules/authentication/services/: account.rs  authentication.rs  mod.rs  password.rs  session.rs  token.rs
src/modules/base/: exports.rs  mod.rs  module.rs
src/modules/base/config/: database.rs  logging.rs
src/modules/base/database/: connection.rs
src/modules/base/extractors/: mod.rs  request_info.rs
src/modules/base/routes/: mod.rs  status.rs
templates/module-template/: exports.rs  mod.rs  module.rs
